--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<h1>Let's See Your Friends</h1>
 	<input id="username" type="text" placeholder="email address">
 	<input id="password" type="password" placeholder="password">
+	<button id="getData">Get My Friends</button>
 
 	<div id="datavis"></div>
 
