fixed issue with ordering of calls and document ready

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <body>
 	
 	<h1>Let's See Your Friends</h1>
-	<input id="username" type="text" placeholder="email address">
-	<input id="password" type="password" placeholder="password">
+	<input id="token" type="text" placeholder="facebook access token">
 	<button id="getData">Get My Friends</button>
 
 	<div id="datavis"></div>
