--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 </head>
 <body>
 	
-	<h1>Let's See Your Friends</h1>
+	<h3>How many friends do you have?</h3>
+	<br />
 	<input id="token" type="text" placeholder="facebook access token">
 	<button id="getData">Get My Friends</button>
 
-	<div id="datavis"></div>
+	<p id="dataviz"></p>
 
 	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="http://d3js.org/d3.v3.min.js"></script>
