working - fixed misuse of append

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 	
-	<h3>How many friends do you have?</h3>
+	<h3>What does Facebook know about you?</h3>
 	<br />
 	<input id="token" type="text" placeholder="facebook access token">
-	<button id="getData">Get My Friends</button>
+	<button id="getData">Get My Info</button>
 
 	<p id="dataviz"></p>
 
