rudimentary paging - should probably handle more complex paging with a closure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<h3>What does Facebook know about you?</h3>
 	<br />
 	<input id="token" type="text" placeholder="facebook access token">
-	<button id="getData">Get My Info</button>
+	<button id="getFriendCount">Get Friend Count</button>
+	<button id="getLikes">See What I Like</button>
 
 	<p id="dataviz"></p>
 
